<resources>
    <string name="app_name">WeetUHet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">jefdayt@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="ond_taal">Taal</string>
    <string name="ond_allerlei">Allerlei</string>
    <string name="ond_natuur">Natuur</string>
    <string name="ond_liedjes">Liedjes</string>
    <string name="ond_weng">Werkwoorden en Gezegden</string>
</resources>
